# copylog

./: README.md  pyproject.toml
src/copylog/: __init__.py  copylog.py
