[project]
name = "copylog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Terry Brown", email = "brown.terryn@epa.gov" }
]
requires-python = ">=3.14"
dependencies = [
    "pyperclip>=1.11.0",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "N",  # pep8-naming
]
